5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1811_2565.log
== TEST (2019-06-11 19:23:25) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=array(eval(input("vetor de carga horaria: ")))
a=0
rn=0
rf=0
i = 0

for v in mf:
	if (mf[i]>=5 and f[i]>=(c[i]*75)/100):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<(c[i]*75)100):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
File "XXXX", line 17
    elif (f[i]<(c[i]*75)100):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:23:37) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=array(eval(input("vetor de carga horaria: ")))
a=0
rn=0
rf=0
i = 0

for v in mf:
	if (mf[i]>=5 and f[i]>=(c[i]*75)/100):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<(c[i]*75)/100):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:24:48) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=(input("vetor de carga horaria: ")))
a=0
rn=0
rf=0
i = 0

for v in mf:
	if (mf[i]>=5 and f[i]>=(c*75)/100):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<(c*75)/100):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
File "XXXX", line 4
    c=(input()))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:25:00) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=input("carga horaria: ")))
a=0
rn=0
rf=0
i = 0

for v in mf:
	if (mf[i]>=5 and f[i]>=(c*75)/100):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<(c*75)/100):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
File "XXXX", line 4
    c=input()))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:25:06) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=input("carga horaria: ")
a=0
rn=0
rf=0
i = 0

for v in mf:
	if (mf[i]>=5 and f[i]>=(c*75)/100):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<(c*75)/100):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:26:31) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=input("carga horaria: ")
a=0
rn=0
rf=0
i = 0
pfm=(c*75)/100
for v in mf:
	if (mf[i]>=5 and f[i]>=pfm:
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<pfm:
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
File "XXXX", line 11
    if (mf[i]>=5 and f[i]>=pfm:
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:26:52) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=input("carga horaria: ")
a=0
rn=0
rf=0
i = 0
pfm=(c*75)/100
for v in mf:
	if (mf[i]>=5 and f[i]>=pfm):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<pfm:
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
File "XXXX", line 17
    elif (f[i]<pfm:
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:26:57) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=input("carga horaria: ")
a=0
rn=0
rf=0
i = 0
pfm=(c*75)/100
for v in mf:
	if (mf[i]>=5 and f[i]>=pfm):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<pfm):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:27:37) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=int(input("carga horaria: "))
a=0
rn=0
rf=0
i = 0
pfm=(c*75)/100
for v in mf:
	if (mf[i]>=5 and f[i]>=pfm):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<pfm):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:27:42) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de medias finais: ")))
f=array(eval(input("vetor de frequencia: ")))
c=int(input("carga horaria: "))
a=0
rn=0
rf=0
i = 0
pfm=(c*75)/100
for v in mf:
	if (mf[i]>=5 and f[i]>=pfm):
		a= a + 1
		i= i + 1
	elif (mf[i]<5):
		rn= rn + 1
		i = i + 1
	elif (f[i]<pfm):
		rf= rf + 1
		i= i + 1
total=zeros(3, dtype=int)
total[0]=a
total[1]=rn
total[2]=rf
print(total)
-- EXECUTION TIME:
1.00268
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
